--- a/public/index.html
+++ b/public/index.html
@@ -1088,7 +1088,7 @@ welcoming breweries, from their large seasonal festivals to their steadfast comm
           <option value="all">All beer types</option>
           <option value="sour">Fruit & Sour</option>
           <option value="india-pale-ale">India Pale Ale</option>
-          <option value="pale-ale">Pale Alee</option>
+          <option value="pale-ale">Pale Ale</option>
           <option value="stout">Stout & Imperial</option>
           <option value="other">Other</option>
         </select>
